src/less/inner-range.less
.inner-range-handle {
  position: absolute;
  bottom: 0;
  background-color: #748290;
  color: white;
  width: 100vw;
  height: @inner-handle-thickness;
  line-height: @inner-handle-thickness;
  //right: calc(~"-100vh" - -@header-height);
  z-index: 1;

  li {
    padding-left: 15px;
    padding-right: 15px;
    cursor: pointer;

    &:hover, &.active {
      background-color: #506171;
    }
  }

  i {
    font-size: smaller;
  }
}

.inner-range {
  padding-top: 20px;
  position: absolute;
  bottom: @inner-handle-thickness;
  //right: @inner-handle-thickness;
  background-color: #F5F5F5;
  height: @inner-range-height;
  //width: 100vw;
  margin-left: 5px;
  box-shadow: 0 0 5px @inner-window-shadow-color;

  .menu-close {
    position: absolute;
    cursor: pointer;
    top: 0;
    right: 5px;
    color: grey;
  }
}

